--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        window.Home = true;
+      </script>
 </head>
 <body>
     <div class="wrapper">
-        <a href="html/adminLogin.html" class="btns">Admin</a>
-        <a href="html/studentFacultyLogin.html" class="btns">Student/Faculty</a>
+        <a href="/adminLogin.html" class="btns">Admin</a>
+        <a href="/studentFacultyLogin.html" class="btns">Student/Faculty</a>
     </div>
 </body>
 </html>
