--- a/facultyDashboard.html
+++ b/facultyDashboard.html
@@ -18,7 +18,7 @@
   <div class="sidebar">
     <div class="user-details">
       <i class="bx bxs-user-circle"></i>
-      <span class="user-name">user name</span>
+      <span class="user-name" id="username">user name</span>
     </div>
 
     <ul class="nav-links">
@@ -27,17 +27,17 @@
           <span>Home</span>
         </a>
       </li>
-      <li data-li="students" class="studentsBtn">
+      <li data-li="students" class="studentsBtn" id="students">
         <a href="#">
           <span>Students</span>
         </a>
       </li>
-      <li data-li="attendance" class="attendanceBtn">
+      <li data-li="attendance" class="attendanceBtn" id="attendance">
         <a href="#">
           <span>Attendance</span>
         </a>
       </li>
-      <li data-li="timetable" class="timetableBtn">
+      <li data-li="timetable" class="timetableBtn" id="timetable">
         <a href="#">
           <span>Timetable</span>
         </a>
@@ -48,7 +48,7 @@
         </a>
       </li>
     </ul>
-    <div class="logout">
+    <div class="logout" id="logout" >
       <div>
         <i class="bx bx-log-out"></i>
         <span>Logout</span>
@@ -58,23 +58,6 @@
   <section class="main">
 
     <div class="item home">
-      <!-- buttons with text and icons -->
-      <!-- <button type="button" class="button">
-        <span>Edit</span>
-       <i class='bx bx-edit'></i>
-      </button>
-      <button type="button" class="button">
-        <span>Delete</span>
-        <i class='bx bx-trash-alt' ></i>
-      </button> -->
-      <!-- buttons with only text -->
-
-      <!-- <button type="button" class="editBtn">
-        <span>Edit</span>
-      </button>
-      <button type="button" class="deleteBtn">
-        <span>Remove</span>
-      </button> -->
     </div>
     <div class="item students">
       <div class="container">
@@ -85,76 +68,46 @@
           </button>
         </div>
         <div class="data">
-          <div class="filter">
-            <input type="text" placeholder="Filter" id="filter-value" />
+          <div class="search-bar">
+            <input type="text" placeholder="Search" id="search" autocomplete="off">
           </div>
-          <table>
-            <thead>
-              <tr>
-                <th id="id" style="width: 5%">Id</th>
-                <th id="name" style="width: 20%" class="name-field">Name</th>
-                <th id="dob">DOB</th>
-                <th id="department">Class</th>
-                <th id="div">Div</th>
-                <th>Roll No</th>
-                <th style="width: 20%">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>44473</td>
-                <td>Vishal Bhangare</td>
-                <td>2003-08-21</td>
-                <td>SYCS</td>
-                <td>A</td>
-                <td>10</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="removeBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-
-              <tr>
-                <td>44586</td>
-                <td>Vikas Bhor</td>
-                <td>2004-06-17</td>
-                <td>SYIT</td>
-                <td>A</td>
-                <td>75</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="removeBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-              <tr>
-                <td>43857</td>
-                <td>Akash</td>
-                <td>2004-04-04</td>
-                <td>SYCS</td>
-                <td>A</td>
-                <td>69</td>
-                <td>
-                  <button type="button" class="editBtn">
-                    <span>Edit</span>
-                  </button>
-                  <button type="button" class="removeBtn">
-                    <span>Remove</span>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div id="table-data">
+            <table>
+              <thead>
+                <tr>
+                  <th id="id" style="width: 5%">Id</th>
+                  <th id="name" style="width: 20%" class="name-field">Name</th>
+                  <th id="department">Class</th>
+                  <th id="div">Div</th>
+                  <th>Roll No</th>
+                  <th id="dob">DOB</th>
+                  <th style="width: 20%">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- <tr>
+                  <td>44473</td>
+                  <td >Vishal Bhangare</td>
+                  <td>SYCS</td>
+                  <td>A</td>
+                  <td>10</td>
+                  <td>2003-08-21</td>
+                  <td>
+                    <button type="button" class="editBtn">
+                      <span>Edit</span>
+                    </button>
+                    <button type="button" class="removeBtn">
+                      <span>Remove</span>
+                    </button>
+                  </td>
+                </tr> -->
+              </tbody>
+            </table>
+          </div>
 
           <div class="pages">
             <span>Items per page:</span>
+            
             <div class="select-menu">
               <div class="select-btn">
                 <span class="sBtn-text">10</span>
@@ -173,12 +126,12 @@
                 </li>
               </ul>
             </div>
-            <span>11 - 20 of 50</span>
+            <span id="info"></span>
             <div class="nav">
-              <i class="bx bx-skip-previous"></i>
-              <i class="bx bx-chevron-left"></i>
-              <i class="bx bx-chevron-right"></i>
-              <i class="bx bx-skip-next"></i>
+              <i class='bx bx-skip-previous previous'></i>
+              <i class='bx bx-chevron-left left' ></i>
+              <i class='bx bx-chevron-right right' ></i>
+              <i class='bx bx-skip-next next' ></i>
             </div>
           </div>
         </div>
@@ -186,30 +139,38 @@
           <div class="card">
             <i class="bx bx-x close-card"></i>
             <div class="content">
-              <span>id</span>:<span id="id"></span> <span>Name</span>:<span id="name"></span>
-              <span>DOB</span>:<span id="dob"></span> <span>Email</span>:<span id="email"></span>
-              <span>Contact no</span>:<span id="contact"></span>
-              <span>Address</span>:<span id="address"></span>
+              <span>id</span>:<span id="id"></span> 
+              <span>Name</span>:<span id="name"></span>
               <span>Class</span>:<span id="class"></span>
               <span>Div</span>:<span id="div"></span>
               <span>Roll no</span>:<span id="rollno"></span>
+              <span>DOB</span>:<span id="dob"></span>
+              <span>Contact no</span>:<span id="contact"></span>
+               <span>Email</span>:<span id="email"></span>
+              <span>Address</span>:<span id="address"></span>
             </div>
           </div>
         </div>
         <div class="card-background2">
           <form action="">
             <div class="card">
-              <span>id</span>:<input type="text" id="id" />
-              <span>Name</span>:<input type="text" id="name" />
-              <span>DOB</span>:<input type="text" id="dob" />
-              <span>Email</span>:<input type="email" id="email" />
-              <span>Contact no</span>:<input type="text" id="contact" />
-              <span>Address</span>:<input type="text" id="address" />
-              <span>Class</span>:<input type="text" id="class" />
-              <span>Div</span>:<input type="text" id="div" />
+              <span>id</span>:  <input type="text" id="id" disabled/>
+              <span>Name</span>:  <input type="text" id="name" />
+              <span>Class</span>: <select id="student_class">
+                <option disabled selected value=""> -- select an option -- </option>
+                <option value="fycs">FYCS</option>
+                <option value="sycs">SYCS</option>
+                <option value="tycs">TYCS</option>
+              </select>
+              <span>Div</span>:<input type="text" id="div"maxlength="1" />
               <span>Roll no</span>:<input type="text" id="rollno" />
+              <span>DOB</span>:<input type="date" id="dob" />
+              <span>Email</span>:<input type="email" id="email" />
+              <span>Contact no</span>:<input type="number" maxlength="10" id="contact"
+              oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+              <span>Address</span>:<textarea name="" id="address" cols="30" rows="2"></textarea>
               <div id="btns">
-                <button type="button" class="saveBtn">Save</button>
+                <button type="button" class="addBtn">Add</button>
                 <button type="button" class="closeBtn">
                   <span>Close</span>
                 </button>
@@ -232,7 +193,35 @@
             </button>
           </div>
         </div>
+        <div class="card-background4">
+          <form action="">
+            <div class="card">
+              <span>id</span>:  <input type="text" id="id" disabled/>
+              <span>Name</span>:  <input type="text" id="name" />
+              <span>Class</span>: <select id="student_class">
+                <option value="fycs">FYCS</option>
+                <option value="sycs">SYCS</option>
+                <option value="tycs">TYCS</option>
+              </select>
+              <span>Div</span>:<input type="text" id="div"maxlength="1" />
+              <span>Roll no</span>:<input type="text" id="rollno" />
+              <span>DOB</span>:<input type="date" id="dob" />
+              <span>Email</span>:<input type="email" id="email" />
+              <span>Contact no</span>:<input type="number" maxlength="10" id="contact"
+              oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+              <span>Address</span>:<textarea name="" id="address" cols="30" rows="2"></textarea>
+              <div id="btns">
+                <button type="button" class="saveBtn">Save</button>
+                <button type="button" class="closeBtn">
+                  <span>Close</span>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
+      <div id="error-msg"></div>
+    <div id="success-msg"></div>
       <!-- <span>faculty Panel</span> -->
     </div>
     <div class="item attendance">
@@ -716,6 +705,7 @@
     <div class="item leaves">
       <!-- <span>records Panel</span> -->
     </div>
+    
   </section>
 
   <script src="/js/facultyDashboard.js"></script>
