attendance, timetable and leaves updated ->student

--- a/facultyDashboard.html
+++ b/facultyDashboard.html
@@ -207,12 +207,8 @@
                 data will be permanently removed. This action cannot be
                 undone.</span
               >
-              <button type="button" class="removeBtn">
-                <span>Remove</span>
-              </button>
-              <button type="button" class="cancelBtn">
-                <span>Cancel</span>
-              </button>
+              <button type="button" class="removeBtn">Remove</button>
+              <button type="button" class="cancelBtn">Cancel</button>
             </div>
           </div>
           <div class="card-background4">
@@ -244,9 +240,7 @@
                 ></textarea>
                 <div id="btns">
                   <button type="button" class="saveBtn">Save</button>
-                  <button type="button" class="closeBtn">
-                    <span>Close</span>
-                  </button>
+                  <button type="button" class="closeBtn">Cancel</button>
                 </div>
               </div>
             </form>
@@ -300,13 +294,13 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <!-- <tr>
                   <td>43</td>
                   <td>Vishal Bhangare</td>
                   <td>70</td>
                   <td>30</td>
                   <td data-id="7"><i class="bx bx-chevron-right"></i></td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
@@ -381,13 +375,13 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <!-- <tr>
                     <td>COMPUTER NETWORKS</td>
                     <td>unknown</td>
                     <td>12</td>
                     <td>10</td>
                     <td>2</td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
@@ -571,7 +565,7 @@
           <div class="header">
             <i class="bx bx-x close-card"></i>
             <div class="info">
-              <span id="id" style="display:none;"></span>
+              <span id="lecture_id" style="display:none;"></span>
               <span id="subject_code" style="display:none;"></span>
               <span id="faculty_id" style="display:none;"></span>
               <span>Class</span>:<span id="class"></span>
