--- a/studentFacultyLogin.html
+++ b/studentFacultyLogin.html
@@ -18,17 +18,17 @@
         </div>
         <div id="studentForm" class="form studentForm">
             <div class="txt_field">
-                <input type="text" id="studentUser" required>
+                <input type="text" id="studentUsername" required>
                 <span></span>
                 <label>Username</label>
             </div>
             <div class="txt_field">
-                <input type="password" id="studentPass" required>
+                <input type="password" id="studentPassword" required>
                 <span></span>
                 <label>Password</label>
             </div>
             <!-- <div class="pass">Forgot Password?</div> -->
-            <input type="submit" value="Login" id="submitBtn">
+            <input type="submit" value="Login" id="loginBtn">
 
         </div>
         <div id="facultyForm" class="form">
@@ -43,7 +43,7 @@
                 <label>Password</label>
             </div>
             <!-- <div class="pass">Forgot Password?</div> -->
-            <input type="submit" value="Login" id="login">
+            <input type="submit" value="Login" id="loginBtn">
         </div>
     </div>
     <script src="/res/jquery-3.6.4.min.js"></script>
