leaves panel updated

--- a/facultyDashboard.html
+++ b/facultyDashboard.html
@@ -650,8 +650,72 @@
         <div id="error-msg"></div>
         <div id="success-msg"></div>
       </div>
+      </div>
       <div class="item leaves">
-        <!-- <span>records Panel</span> -->
+        <div class="header"><div class="select-menu">
+          <div class="select-btn">
+            <span class="sBtn-text">select class :</span>
+            <i class="bx bx-chevron-down"></i>
+          </div>
+
+          <ul class="options">
+            <li class="option">
+              <span class="option-text">FYCS</span>
+            </li>
+            <li class="option">
+              <span class="option-text">SYCS</span>
+            </li>
+            <li class="option">
+              <span class="option-text">TYCS</span>
+            </li>
+          </ul>
+        </div></div>
+        <div class="select-class">select a class to load data !!!</div>
+        <div class="data">
+          <div id="table-data">
+						<table>
+							<thead>
+								<th>Id</th>
+								<th>Application date</th>
+								<th>Reason</th>
+								<th>Status</th>
+								<th></th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>2023-09-29</td>
+									<td>xyz reason</td>
+									<td>pending</td>
+									<td><i class='bx bx-chevron-right'></i></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+          <div class="leave-details"> 
+						<div class="card"  > 
+							<i class="bx bx-x close-card"></i>
+							<span>id</span>: <span id="id"></span>
+							<span>Application Date</span>: <span id="app_date"></span>
+							<span>Student id</span>: <span id="student_id"></span>
+							<span>Student Name</span>: <span id="student_class"></span>
+							<span>Student Class</span>: <span id="subject"></span>
+							<span>From</span>: <span id="from_date"></span>
+							<span>To</span>: <span id="to_date"></span>
+							<span>subject</span>: <span id="subject"></span>
+							<span>body</span>: <span id="body"></span>
+							<span>attachment</span>: <a href="#">view</a>
+              <div><center>
+                <button type="button" id="accept">Accept</button>
+                <button type="button" id="reject">Reject</button>
+              </center>
+              </div>
+						</div>
+					  
+				</div>
+        </div>
+        <div id="error-msg"></div>
+        <div id="success-msg"></div>
       </div>
     </section>
 
