admin,faculty,student dashboard done-notResponsive

--- a/studentDashboard.html
+++ b/studentDashboard.html
@@ -54,7 +54,18 @@
 		</div>
 	</div>
 	<section class="main">
-		<div class="item home"></div>
+		<div class="item home">
+			<div class="container">
+				<div class="header"><span>Today's schedule</span></div>
+				<div class="data">
+					<!-- <div class="schedule" data-no="1">
+						<span>Time</span>:<span id="time">12:00-01:00</span>
+						<span>Subject</span>:<span id="subject">Python</span>
+						<span>Faculty</span>:<span id="faculty">Prof.albert</span>
+					</div> -->
+				</div>
+			</div>
+		</div>
 		<div class="item attendance" id="attendance">
 			<div class="header">
 				<div class="info">
@@ -284,6 +295,22 @@
 							</tbody>
 						</table>
 					</div>
+					<div class="leave-details">
+            <div class="card">
+              <i class="bx bx-x close-card"></i>
+              <span>id</span>: <span id="id"></span>
+              <span>Application Date</span>: <span id="app_date"></span>
+              <span>Student id</span>: <span id="student_id"></span>
+              <span>Student Name</span>: <span id="student_class"></span>
+              <span>Student Class</span>: <span id="subject"></span>
+              <span>From</span>: <span id="from_date"></span> <span>To</span>:
+              <span id="to_date"></span> <span>subject</span>:
+              <span id="subject"></span> <span>body</span>:
+              <span id="body"></span> <span>attachment</span>:
+              <a href="#">view</a>
+							<span>Status</span>: <span id="status"></span>
+            </div>
+          </div>
 				</div>
 				<div class="container">
 					<span>Student ID</span>:<input type="text" name="student_id" id="student_id" readonly>
