adding btn and name in login pages

--- a/facultyDashboard.html
+++ b/facultyDashboard.html
@@ -9,6 +9,19 @@
   <link rel="stylesheet" href="/css/facultyDashboard.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <script src="/res/jquery-3.6.4.min.js"></script>
+  <style>
+            div[style*="text-align: right;position: fixed;z-index:9999999;bottom: 0;width: auto;right: 1%;cursor: pointer;line-height: 0;display:block !important;"] {
+                display: none !important;
+            }
+            
+            img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+                display: none !important;
+            }
+            
+            a[href*="https://www.000webhost.com/?utm_source=000webhostapp&utm_campaign=000_logo&utm_medium=website&utm_content=footer_img"] {
+                display: none !important;
+            }
+        </style>
 </head>
 
 <body>
@@ -190,9 +203,9 @@
                 <option disabled selected value="">
                   -- select an option --
                 </option>
-                <option value="fycs">FYCS</option>
-                <option value="sycs">SYCS</option>
-                <option value="tycs">TYCS</option>
+                <option value="FYCS">FYCS</option>
+                <option value="SYCS">SYCS</option>
+                <option value="TYCS">TYCS</option>
               </select>
               <span>Div</span>:<input type="text" id="div" maxlength="1" />
               <span>Roll no</span>:<input type="text" id="rollno" />
@@ -228,9 +241,9 @@
               <span>Name</span>: <input type="text" id="name" />
               <span>Class</span>:
               <select id="student_class">
-                <option value="fycs">FYCS</option>
-                <option value="sycs">SYCS</option>
-                <option value="tycs">TYCS</option>
+                <option value="FYCS">FYCS</option>
+                <option value="SYCS">SYCS</option>
+                <option value="TYCS">TYCS</option>
               </select>
               <span>Div</span>:<input type="text" id="div" maxlength="1" />
               <span>Roll no</span>:<input type="text" id="rollno" />
