--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -14,6 +14,19 @@
         window.location.href = "http://127.0.0.1:8080/"
     }*/
   </script>
+  <style>
+            div[style*="text-align: right;position: fixed;z-index:9999999;bottom: 0;width: auto;right: 1%;cursor: pointer;line-height: 0;display:block !important;"] {
+                display: none !important;
+            }
+            
+            img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+                display: none !important;
+            }
+            
+            a[href*="https://www.000webhost.com/?utm_source=000webhostapp&utm_campaign=000_logo&utm_medium=website&utm_content=footer_img"] {
+                display: none !important;
+            }
+        </style>
 </head>
 
 <body onload="if (document.referrer == '') self.location='index.html';">
