--- a/adminLogin.html
+++ b/adminLogin.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Admin Login</title>
-    <link rel="stylesheet" href="/css/adminLogin.css">
-  
-    <!--<script>
-      window.LoginPage = true; 
-    </script> -->
-  </head>
-  <body>
-    <div class="center">
-      <h1>Login</h1>
-      <div id="card">
-        <div class="txt_field">
-          <input type="text" id="username" required>
-          <span></span>
-          <label>Username</label>
-        </div>
-        <div class="txt_field">
-          <input type="password" id="password" required>
-          <span></span>
-          <label>Password</label>
-        </div>
-        <!-- <div class="pass">Forgot Password?</div> -->
-        <input type="submit" value="Login" id="loginBtn">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Admin Login</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/adminLogin.css">
+
+  <style>
+    div[style*="text-align: right;position: fixed;z-index:9999999;bottom: 0;width: auto;right: 1%;cursor: pointer;line-height: 0;display:block !important;"] {
+      display: none !important;
+    }
+
+    img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+      display: none !important;
+    }
+
+    a[href*="https://www.000webhost.com/?utm_source=000webhostapp&utm_campaign=000_logo&utm_medium=website&utm_content=footer_img"] {
+      display: none !important;
+    }
+  </style>
+</head>
+
+<body>
+  <h2 class="name">Studpunch</h2>
+  <a href='/' class="home">
+    <img src="./assets/house-solid.svg" alt="house" /> Home
+  </a>
+  <div class="center">
+    <h1>Login</h1>
+    <div id="card">
+      <div class="txt_field">
+        <input type="text" id="username" required>
+        <span></span>
+        <label>Username</label>
       </div>
+      <div class="txt_field">
+        <input type="password" id="password" required>
+        <span></span>
+        <label>Password</label>
+      </div>
+      <!-- <div class="pass">Forgot Password?</div> -->
+      <input type="submit" value="Login" id="loginBtn">
     </div>
-    
-    <script src="/res/jquery-3.6.4.min.js"></script>
-    <script>
+  </div>
 
-      $(document).ready(function() {
-        $("#loginBtn").on("click",(btn)=>{
-          btn.preventDefault();
-          var user = $("#username").val();
-          var pass = $("#password").val();
+  <script src="/res/jquery-3.6.4.min.js"></script>
+  <script>
 
-          $.ajax({
-            url : "/php/adminLogin.php",
-            type : "POST",
-            data : {action : "adminlogin",username : user, password: pass},
-            success : function(data){
-              console.log(data);
-              if(data == 1){
-                $("#username").val("");
-                $("#password").val("");
-                window.location.href = '/adminDashboard.html';
-                sessionStorage.setItem("username",user );
-                sessionStorage.setItem("status","user-logged-in")
-              }
-              else if(data == 0){
-                $("#username").val("");
-                $("#password").val("");
-                alert("Invalid username or password");
-              }
+    $(document).ready(function () {
+      $("#loginBtn").on("click", (btn) => {
+        btn.preventDefault();
+        var user = $("#username").val();
+        var pass = $("#password").val();
+
+        $.ajax({
+          url: "/php/adminLogin.php",
+          type: "POST",
+          data: { action: "adminlogin", username: user, password: pass },
+          success: function (data) {
+            console.log(data);
+            if (data == 1) {
+              $("#username").val("");
+              $("#password").val("");
+              window.location.href = '/adminDashboard.html';
+              sessionStorage.setItem("username", user);
+              sessionStorage.setItem("status", "user-logged-in")
             }
-          })
+            else if (data == 0) {
+              $("#username").val("");
+              $("#password").val("");
+              alert("Invalid username or password");
+            }
+          }
         })
-      });
-    
-    </script>
-  </body>
+      })
+    });
+
+  </script>
+</body>
+
 </html>
