--- a/studentDashboard.html
+++ b/studentDashboard.html
@@ -11,7 +11,19 @@
 	<script src="/res/jquery-3.6.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/printThis/1.15.0/printThis.min.js"></script>
 
-	
+	<style>
+            div[style*="text-align: right;position: fixed;z-index:9999999;bottom: 0;width: auto;right: 1%;cursor: pointer;line-height: 0;display:block !important;"] {
+                display: none !important;
+            }
+            
+            img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+                display: none !important;
+            }
+            
+            a[href*="https://www.000webhost.com/?utm_source=000webhostapp&utm_campaign=000_logo&utm_medium=website&utm_content=footer_img"] {
+                display: none !important;
+            }
+        </style>
 </head>
 
 <body>
