--- a/studentFacultyLogin.html
+++ b/studentFacultyLogin.html
@@ -5,11 +5,28 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Student/Faculty Login</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/css/studentFacultyLogin.css">
+    <style>
+        div[style*="text-align: right;position: fixed;z-index:9999999;bottom: 0;width: auto;right: 1%;cursor: pointer;line-height: 0;display:block !important;"] {
+            display: none !important;
+        }
 
+        img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+            display: none !important;
+        }
+
+        a[href*="https://www.000webhost.com/?utm_source=000webhostapp&utm_campaign=000_logo&utm_medium=website&utm_content=footer_img"] {
+            display: none !important;
+        }
+    </style>
 </head>
 
 <body>
+    <h2 class="name">Studpunch</h2>
+    <a href='/' class="home">
+        <img src="./assets/house-solid.svg" alt="house" /> Home
+    </a>
     <div class="center">
         <div class="actionBtns">
             <h1 class="Btn student">Student</h1>
